bug persists on mobile

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -13,9 +13,10 @@ html {
   font-family: $body-font;
   color: $body-font-color;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 section {
   padding: 3.9rem 0;
